fixed freeness and scrollbar better?

--- a/css/main.css
+++ b/css/main.css
@@ -242,7 +242,7 @@ iframe {
 }
 .icony{
 	right:  auto;
-	top: 30px;
+	/* top: 30px; */
 	z-index: 2;
 	transition: all ease-in 4s;
 }
@@ -287,3 +287,21 @@ iframe {
 .weatherwidget-io{
 	z-index: 10;
 }
+/* scrollbar stuff */
+	/* width */
+	::-webkit-scrollbar {
+		width: 10px;
+	}
+	/* Track */
+	::-webkit-scrollbar-track {
+		background: #f9f1e3; 
+	}
+	/* Handle */
+	::-webkit-scrollbar-thumb {
+		background: #814b46; 
+	}
+	/* Handle on hover */
+	::-webkit-scrollbar-thumb:hover {
+		background: #a26863;
+	}
+/* next stuff*/
